After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 750868 - osxaudio: fix latency property query on RemoteIO
osxaudio: fix latency property query on RemoteIO
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other Mac OS
: Normal normal
: 1.5.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-06-12 16:19 UTC by Ilya Konstantinov
Modified: 2015-06-12 20:44 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
osxaudio: fix latency property query on RemoteIO (1.04 KB, patch)
2015-06-12 16:20 UTC, Ilya Konstantinov
none Details | Review
osxaudio: fix latency property query on RemoteIO (1.12 KB, patch)
2015-06-12 16:24 UTC, Ilya Konstantinov
committed Details | Review

Description Ilya Konstantinov 2015-06-12 16:19:22 UTC
AudioUnitGetProperty fails with kParamErr (-50) every time, simply because size isn't initialized.
Comment 1 Ilya Konstantinov 2015-06-12 16:20:09 UTC
Created attachment 305163 [details] [review]
osxaudio: fix latency property query on RemoteIO

Trivial patch.
Comment 2 Ilya Konstantinov 2015-06-12 16:24:53 UTC
Created attachment 305164 [details] [review]
osxaudio: fix latency property query on RemoteIO

Nicer patch, to match gstosxcoreaudiohal.c. Still trivial.
Comment 3 Sebastian Dröge (slomo) 2015-06-12 20:44:29 UTC
commit f676079e95852700abb61f621ee05e2e3facce6c
Author: Ilya Konstantinov <ilya.konstantinov@gmail.com>
Date:   Fri Jun 12 19:21:10 2015 +0300

    osxaudio: fix latency property query on RemoteIO
    
    AudioUnitGetProperty would fail with kParamErr (-50) every time,
    simply because size wasn't initialized.
    
    Now it returns zero latency, but at least it doesn't fail.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=750868